.devops/openshift/app/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-sso
  labels:
    app: api-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-sso
  template:
    metadata:
      labels:
        app: api-sso
    spec:
      containers:
      - name: api-sso
        image: httpd:latest
        ports:
        - containerPort: 8080
