.devops/openshift/app/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-sso
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: api-sso
